@@ -3,6 +3,7 @@ Static site (2015-09-03 shi)
 FAQ page layout styles
 Added General and Technical questions to FAQ
 Added Generator questions to FAQ
+Added more click states to FAQ
 
 
 Static site (2015-09-02 shi)
